--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,4 +3,6 @@
 @import './base/reset';
 @import './components/logo';
 @import './components/page-header';
-@import './components/body'
+@import './components/body';
+@import './components/page-footer';
+@import './components/modal-window';
