--- a/css/main.css
+++ b/css/main.css
@@ -551,4 +551,363 @@ img {
 }
 .partners-section__link:hover, .partners-section__link:focus {
   border: 1px solid #2196f3;
+}
+
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2f303a;
+}
+
+.footer__content {
+  display: flex;
+}
+
+.footer__adress-content {
+  margin-right: 70px;
+}
+
+.footer__contact-info--mail {
+  margin-bottom: 9px;
+}
+
+.footer__addres-item {
+  margin-bottom: 9px;
+}
+
+.footer__addres-item:last-child {
+  margin-bottom: 0;
+}
+
+.footer__contact-info {
+  color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+}
+
+.footer__map {
+  color: var(--hero-color);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+}
+
+.footer__title {
+  display: inline-block;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--hero-color);
+  padding-top: 12px;
+}
+
+.footer__social {
+  max-height: 80px;
+}
+
+.footer__icon {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  fill: var(--hero-color);
+}
+
+/* SVG */
+.footer__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer__link:hover, .footer__link:focus {
+  background-color: var(--accent-color);
+}
+
+/* FOOTER FORM      */
+.footer__form-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--hero-color);
+  margin-bottom: 20px;
+  margin-left: 93px;
+  padding-top: 12px;
+}
+
+.footer__mail-input {
+  margin-left: 93px;
+  margin-right: 12px;
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: #2f303a;
+  padding: 15px 16px;
+  color: rgba(255, 255, 255, 0.6);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), filter 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer__mail-input:focus {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  background-color: #2f303a;
+}
+
+.footer__sub-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 200px;
+  min-height: 50px;
+  background: var(--accent-color);
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  gap: 10px;
+  letter-spacing: 0.06em;
+  color: var(--hero-color);
+  border: solid 0px var(--hero-color);
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer__sub-btn:focus, .footer__sub-btn:hover {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.footer__form {
+  display: flex;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.backdrop.is-hidden .modal {
+  opacity: 0;
+  transform: translate(-50%, -50%);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+  background-color: var(--hero-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__btn {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  margin-top: 8px;
+  margin-right: 8px;
+  margin-left: 490px;
+  margin-bottom: 543px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--hero-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__btn:hover, .modal__btn:focus {
+  fill: #188ce8;
+}
+
+.modal__title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  padding-top: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-bottom: 12px;
+}
+
+/*            MODAL FORM            */
+.form {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  letter-spacing: 0.01em;
+  color: rgb(117, 117, 117);
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.form__label {
+  margin-bottom: 10px;
+  align-items: center;
+  line-height: 1.16;
+}
+
+.form__group {
+  position: relative;
+  margin-top: 4px;
+}
+
+.form__input {
+  width: 100%;
+  padding: 12px 42px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  font-size: 16px;
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__input:focus {
+  outline: 1px solid rgb(33, 150, 243);
+}
+
+.form__icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__input:focus + .form__icon {
+  fill: rgb(33, 150, 243);
+}
+
+.form__textarea-label {
+  margin-bottom: 20px;
+  line-height: 1.16;
+}
+
+.form__textarea {
+  resize: none;
+  width: 448px;
+  height: 120px;
+  padding: 10px 14px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline-offset: -1px;
+  font-size: 14px;
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__textarea:focus {
+  outline: 1px solid rgb(33, 150, 243);
+}
+
+.form__checkbox {
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  height: 24px;
+  padding-left: 10px;
+  margin-bottom: 30px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+.form__checkbox .form__link {
+  color: var(--accent-color);
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+.form__checkbox-icon {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateX(8px) translateY(4px);
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid black;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__input-check:checked ~ .form__checkbox-icon {
+  background-color: transparent;
+  background-color: rgb(33, 150, 243);
+  background-image: url(/images/icon-check.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-origin: border-box;
+  border: transparent;
+}
+
+.form__input-check {
+  opacity: 0;
+  position: absolute;
+  transform: translateY(10px);
+  z-index: 10;
+}
+
+.form__check-label {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateX(30px);
+}
+
+.form__modal-form-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 200px;
+  min-height: 50px;
+  background: var(--accent-color);
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  color: var(--hero-color);
+  border: solid 0px var(--hero-color);
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form__modal-form-btn:focus, .form__modal-form-btn:hover {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }/*# sourceMappingURL=main.css.map */
