--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -180,7 +180,7 @@
         .form__input-check:checked ~ & {
             background-color: transparent;
             background-color: rgba(33, 150, 243, 1);
-            background-image: url(./images/icon-check.svg);
+            background-image: url(../images/icon-check.svg);
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
