--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,8 @@
-@import '/utils/var';
-@import '/base/base';
-@import '/base/reset';
-@import '/components/logo';
-@import '/components/page-header';
-@import '/components/body';
-@import '/components/page-footer';
-@import '/components/modal-window';
+@import './utils/var';
+@import './base/base';
+@import './base/reset';
+@import './components/logo';
+@import './components/page-header';
+@import './components/body';
+@import './components/page-footer';
+@import './components/modal-window';
