--- a/css/main.css
+++ b/css/main.css
@@ -167,7 +167,7 @@ img {
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: #c4c4c4;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-img.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-img.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 1600px;
@@ -863,7 +863,14 @@ img {
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form__input-check:checked ~ .form__checkbox-icon {
+
+.form__input-check {
+  opacity: 0;
+  position: absolute;
+  transform: translateY(10px);
+  z-index: 10;
+}
+.form__input-check:checked ~ .form__input-check .form__checkbox-icon {
   background-color: transparent;
   background-color: rgb(33, 150, 243);
   background-image: url(../images/icon-check.svg);
@@ -872,13 +879,6 @@ img {
   background-repeat: no-repeat;
   background-origin: border-box;
   border: transparent;
-}
-
-.form__input-check {
-  opacity: 0;
-  position: absolute;
-  transform: translateY(10px);
-  z-index: 10;
 }
 
 .form__check-label {
