--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -177,16 +177,6 @@
         background-image 250ms cubic-bezier(0.4, 0, 0.2, 1),
         border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-        .form__input-check:checked ~ & {
-            background-color: transparent;
-            background-color: rgba(33, 150, 243, 1);
-            background-image: url(../images/icon-check.svg);
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-origin: border-box;
-            border: transparent;
-        }
 }
 
 .form__input-check {
@@ -194,6 +184,17 @@
     position: absolute;
     transform: translateY(10px);
     z-index: 10;
+
+    &:checked ~ & .form__checkbox-icon {
+    background-color: transparent;
+    background-color: rgba(33, 150, 243, 1);
+    background-image: url(../images/icon-check.svg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-origin: border-box;
+    border: transparent;
+    }
 }
 
 .form__check-label {
