--- a/css/main.css
+++ b/css/main.css
@@ -863,14 +863,7 @@ img {
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.form__input-check {
-  opacity: 0;
-  position: absolute;
-  transform: translateY(10px);
-  z-index: 10;
-}
-.form__input-check:checked ~ .form__input-check .form__checkbox-icon {
+.form__input-check:checked ~ .form__checkbox-icon {
   background-color: transparent;
   background-color: rgb(33, 150, 243);
   background-image: url(../images/icon-check.svg);
@@ -879,6 +872,13 @@ img {
   background-repeat: no-repeat;
   background-origin: border-box;
   border: transparent;
+}
+
+.form__input-check {
+  opacity: 0;
+  position: absolute;
+  transform: translateY(10px);
+  z-index: 10;
 }
 
 .form__check-label {
