--- a/css/main.css
+++ b/css/main.css
@@ -706,13 +706,11 @@ img {
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
 }
-
 .backdrop.is-hidden .modal {
   opacity: 0;
   transform: translate(-50%, -50%);
@@ -863,22 +861,22 @@ img {
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form__input-check:checked ~ .form__checkbox-icon {
-  background-color: transparent;
-  background-color: rgb(33, 150, 243);
-  background-image: url(/images/icon-check.svg);
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-origin: border-box;
-  border: transparent;
-}
 
 .form__input-check {
   opacity: 0;
   position: absolute;
   transform: translateY(10px);
   z-index: 10;
+}
+.form__input-check:checked ~ .form__checkbox-icon {
+  background-color: transparent;
+  background-color: rgb(33, 150, 243);
+  background-image: url(../images/icon-check.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-origin: border-box;
+  border: transparent;
 }
 
 .form__check-label {
