--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -7,17 +7,17 @@
     background-color: rgba(0, 0, 0, 0.2);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
-}
+        &.is-hidden {
+            opacity: 0;
+            pointer-events: none;
+            visibility: hidden;
+        }
 
-.backdrop.is-hidden .modal {
-    opacity: 0;
-    transform: translate(-50%, -50%);
+        &.is-hidden .modal {
+            opacity: 0;
+            transform: translate(-50%, -50%);
+        }
 }
 
 .modal {
@@ -176,17 +176,6 @@
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-image 250ms cubic-bezier(0.4, 0, 0.2, 1),
         border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-        .form__input-check:checked ~ & {
-            background-color: transparent;
-            background-color: rgba(33, 150, 243, 1);
-            background-image: url(/images/icon-check.svg);
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-origin: border-box;
-            border: transparent;
-        }
 }
 
 .form__input-check {
@@ -194,6 +183,17 @@
     position: absolute;
     transform: translateY(10px);
     z-index: 10;
+
+    &:checked~.form__checkbox-icon {
+        background-color: transparent;
+        background-color: rgba(33, 150, 243, 1);
+        background-image: url(../images/icon-check.svg);
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-origin: border-box;
+        border: transparent;
+        }
 }
 
 .form__check-label {
