--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,12 +1,10 @@
 .section {
+    @media screen and (min-width:$desktop) {
     padding-top: 94px;
     padding-bottom: 94px;
+    }
 }
 
-.container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+body.modal-open {
+    overflow: hidden;
 }
