--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,25 +1,47 @@
 .logo {
-    display: flex;
-    align-items: center;
     color: var(--logo-color);
     font-family: $logoFont;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
+    font-size: 24px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
     text-decoration: none;
-    margin-right: 93px;
-}
+
+        @media screen and (min-width:$desktop) {
+            display: flex;
+            align-items: center;
+            color: var(--logo-color);
+            font-family: $logoFont;
+            font-weight: 700;
+            font-size: 26px;
+            line-height: 1.2;
+            letter-spacing: 0.03em;
+            text-decoration: none;
+            margin-right: 93px;
+            }
+    }
+    
+
 
 .logo__web-logo {
     color: var(--accent-color);
     font-family: $logoFont;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
+    font-size: 24px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
     text-decoration: none;
-}
+
+    @media screen and (min-width:$desktop) {
+            color: var(--accent-color);
+            font-family: $logoFont;
+            font-weight: 700;
+            font-size: 26px;
+            line-height: 1.2;
+            letter-spacing: 0.03em;
+            text-decoration: none;
+        }
+    }
 
 .logo--footer {
     margin-bottom: 20px;
