--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,83 +1,35 @@
 .header {
     border-bottom: 1px solid #ececec;
 }
-.header__header-container {
-    display: flex;
-    align-items: center;
-}
-.header__contacts {
-    display: flex;
-    gap: 50px;
-    align-items: center;
-}
-.header__contact {
-    display: flex;
-    align-items: center;
-    color: var(--text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    gap: 10px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover,
-    &:focus {
-        color: var(--accent-color);
-    }
-}
-.header__contact:hover .header__contact-icon,
-.header__contact:focus .header__contact-icon {
-    fill: var(--accent-color);
-}
-.header__contact-icon {
-    fill: rgba(117, 117, 117, 1);
-    align-items: center;
-    
-    .header__contact:hover &,
-    .header__contact:focus & {
-        fill: var(--accent-color);
-    }
-}
-.nav {
-    margin-right: auto;
-    display: flex;
-    align-items: center;
-}
 .nav__site-nav {
-    display: flex;
-    gap: 50px;
-    align-items: center;
-}
-.nav__link {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    position: relative;
-}
-.nav__link {
-    color: var(--primary-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        color: var(--accent-color);
+    @media screen and (max-width:$mobile) {
+        display: none;
     }
 }
-.nav__link--current::after {
-    position: absolute;
-    content: "";
+
+.header__header-contacts {
+    @media screen and (max-width:$mobile) {
+        display: none;
+    }
+}
+
+.header__menu-btn {
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.header__menu-btn .header__icon-close {
+    display: none;
+}
+
+.header__icon-menu--is-open .header__icon-close {
     display: block;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--accent-color);
+}
+
+.header__icon-menu--is-open .header__icon-menu--is-open {
+    display: none;
 }
