--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,8 @@
+@import './utils/breakpoints';
 @import './utils/var';
-@import './base/base';
 @import './base/reset';
+@import './base/container';
+@import './base/base';
 @import './components/logo';
 @import './components/page-header';
-@import './components/body';
-@import './components/page-footer';
-@import './components/modal-window';
+@import './components/modal-menu;'
