--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,4 +5,4 @@
 @import './base/base';
 @import './components/logo';
 @import './components/page-header';
-@import './components/modal-menu;'
+@import './components/modal-menu';
