--- a/sass/components/_modal-menu.scss
+++ b/sass/components/_modal-menu.scss
@@ -1,14 +1,55 @@
-.header__backdrop {
+
+.menu-container {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
+    width: 100vw;
+    height: 100vh;
+    padding: 32px;
+    background-color: var(--hero-color);
+    z-index: 999;
 
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
 }
 
-.header__backdrop--is-hidden {
-    display: none;
+.menu-container.is-open {
+    transform: translateX(0);
 }
 
+.menu-container .menu-toggle {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: #fff;
+}
+
+.mobile-menu {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.mobile-menu__item {
+    margin-bottom: 32px
+}
+.mobile-menu__item:nth-last-child(1) {
+    margin-bottom: 0;
+}
+.mobile-menu__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    display: block;
+    color: var(--primary-text-color);
+    text-decoration: none;
+
+    &:hover, &:focus {
+        color: var(--accent-color);
+    }
+}
+
+.menu-toggle__icon:hover, .menu-toggle__icon:focus {
+    fill: var(--accent-color);
+}
