--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -3,33 +3,44 @@
 }
 
 .nav__site-nav {
-    @media screen and (max-width:$mobile) {
+    @media screen and (max-width:767px) {
         display: none;
     }
 }
 
 .header__header-contacts {
-    @media screen and (max-width:$mobile) {
+    @media screen and (max-width:767px) {
+        display: none;
+    }
+}
+.header__header-container {
+    @media screen and (max-width:767px) {
+    min-height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    }
+}
+.menu-toggle {
+    min-height: 40px;
+    min-width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+
+    &:hover, &:focus {
+        fill: var(--accent-color);
+    }
+
+    @media screen and (min-width:$tablet) {
         display: none;
     }
 }
 
-.header__menu-btn {
-    margin: 0;
-    padding: 0;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.header__menu-btn .header__icon-close {
-    display: none;
-}
-
-.header__icon-menu--is-open .header__icon-close {
-    display: block;
-}
-
-.header__icon-menu--is-open .header__icon-menu--is-open {
-    display: none;
-}
