--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,10 @@ ul {
   margin: 0;
 }
 
+.link {
+  text-decoration: none;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -75,19 +79,14 @@ img {
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-decoration: none;
+  margin-right: 93px;
 }
 @media screen and (min-width: 1200px) {
   .logo {
     display: flex;
     align-items: center;
-    color: var(--logo-color);
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
-    letter-spacing: 0.03em;
-    text-decoration: none;
-    margin-right: 93px;
   }
 }
 
@@ -102,13 +101,8 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .logo__web-logo {
-    color: var(--accent-color);
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
-    letter-spacing: 0.03em;
-    text-decoration: none;
   }
 }
 
@@ -119,12 +113,65 @@ img {
 
 .header {
   border-bottom: 1px solid #ececec;
+  background-color: var(--hero-color);
 }
 
+.header__header-container {
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .header__header-container {
+    min-height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+}
+
+.nav {
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+}
+
+.nav__site-nav {
+  display: flex;
+  gap: 50px;
+  align-items: center;
+}
 @media screen and (max-width: 767px) {
   .nav__site-nav {
     display: none;
   }
+}
+
+.nav__link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  position: relative;
+  color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav__link:hover, .nav__link:focus {
+  color: var(--accent-color);
+}
+
+.nav__link--current::after {
+  position: absolute;
+  content: "";
+  display: block;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
 }
 
 @media screen and (max-width: 767px) {
@@ -133,13 +180,46 @@ img {
   }
 }
 
-@media screen and (max-width: 767px) {
-  .header__header-container {
-    min-height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+.header__contacts {
+  display: flex;
+  gap: 50px;
+}
+@media screen and (max-width: 1199px) {
+  .header__contacts {
+    flex-direction: column;
+    margin-left: auto;
+    gap: 10px;
   }
+}
+
+.header__contact {
+  display: flex;
+  align-items: center;
+  color: var(--text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  gap: 10px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header__contact:hover, .header__contact:focus {
+  color: var(--accent-color);
+}
+@media screen and (max-width: 1199px) {
+  .header__contact {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+}
+
+.header__contact-icon {
+  fill: rgb(117, 117, 117);
+  align-items: center;
+}
+.header__contact:hover .header__contact-icon, .header__contact:focus .header__contact-icon {
+  fill: var(--accent-color);
 }
 
 .menu-toggle {
@@ -156,7 +236,7 @@ img {
   border-radius: 50%;
   outline: none;
 }
-.menu-toggle:hover, .menu-toggle:focus {
+.menu-toggle .menu-toggle__icon:hover, .menu-toggle .menu-toggle__icon:focus {
   fill: var(--accent-color);
 }
 @media screen and (min-width: 768px) {
@@ -169,6 +249,8 @@ img {
   position: fixed;
   top: 0;
   left: 0;
+  display: flex;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
   padding: 32px;
@@ -193,6 +275,7 @@ img {
   padding: 0;
   margin: 0;
   list-style: none;
+  margin-bottom: auto;
 }
 
 .mobile-menu__item {
@@ -210,12 +293,45 @@ img {
   letter-spacing: 0.02em;
   display: block;
   color: var(--primary-text-color);
-  text-decoration: none;
 }
-.mobile-menu__link:hover, .mobile-menu__link:focus {
+
+.current {
   color: var(--accent-color);
 }
 
-.menu-toggle__icon:hover, .menu-toggle__icon:focus {
-  fill: var(--accent-color);
+.socials-menu {
+  display: flex;
+  gap: 20px;
+}
+
+.socials-menu__link {
+  color: var(--accent-color);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+}
+
+.contacts-menu {
+  margin-bottom: 64px;
+}
+
+.contacts-menu__item {
+  margin-bottom: 32px;
+}
+
+.contacts-menu__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.contacts-menu__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
 }/*# sourceMappingURL=main.css.map */
