--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,11 +1,65 @@
 .header {
     border-bottom: 1px solid #ececec;
+    background-color: var(--hero-color);
+}
+
+.header__header-container {
+    display: flex;
+    align-items: center;
+
+    @media screen and (max-width:767px) {
+        min-height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+}
+
+.nav {
+    margin-right: auto;
+    display: flex;
+    align-items: center;
 }
 
 .nav__site-nav {
+    display: flex;
+    gap: 50px;
+    align-items: center;
+
+
     @media screen and (max-width:767px) {
         display: none;
     }
+}
+
+.nav__link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    position: relative;
+    color: var(--primary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus {
+            color: var(--accent-color);
+        }
+}
+
+.nav__link--current::after {
+    position: absolute;
+    content: "";
+    display: block;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
 }
 
 .header__header-contacts {
@@ -13,14 +67,53 @@
         display: none;
     }
 }
-.header__header-container {
-    @media screen and (max-width:767px) {
-    min-height: 60px;
+
+.header__contacts {
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    gap: 50px;
+
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+        margin-left: auto;
+        gap: 10px;
+            
     }
 }
+
+.header__contact {
+    display: flex;
+    align-items: center;
+    color: var(--text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    gap: 10px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+        &:hover,
+        &:focus {
+            color: var(--accent-color);
+        }
+
+    @media screen and (max-width: 1199px) {
+    font-size: 12px;
+    line-height: 1.16;
+    }
+
+}
+
+.header__contact-icon {
+    fill: rgba(117, 117, 117, 1);
+    align-items: center;
+
+    .header__contact:hover &,
+    .header__contact:focus & {
+        fill: var(--accent-color);
+    }
+}
+
 .menu-toggle {
     min-height: 40px;
     min-width: 40px;
@@ -35,7 +128,7 @@
     border-radius: 50%;
     outline: none;
 
-    &:hover, &:focus {
+    & .menu-toggle__icon:hover, & .menu-toggle__icon:focus {
         fill: var(--accent-color);
     }
 
