--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,13 @@ img {
   margin-bottom: 20px;
   color: var(--hero-color);
 }
+@media screen and (max-width: 767px) {
+  .logo--footer {
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 28px;
+  }
+}
 
 .header {
   border-bottom: 1px solid #ececec;
@@ -334,4 +341,179 @@ img {
   line-height: 1.16;
   letter-spacing: 0.02em;
   color: var(--text-color);
+}
+
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2f303a;
+}
+@media screen and (max-width: 767px) {
+  .footer {
+    height: 604px;
+  }
+}
+
+.footer__container {
+  height: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__logo-adress {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer__adress-content {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer__addres-item {
+    margin-bottom: 12px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer__addres-item:nth-last-child(1) {
+    margin-bottom: 0;
+  }
+}
+
+.footer__map {
+  color: var(--hero-color);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+
+.footer__contact-info {
+  color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__social {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer__title {
+    display: inline-block;
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--hero-color);
+  }
+}
+
+.footer__icon {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  fill: var(--hero-color);
+}
+
+.footer__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer__link:hover, .footer__link:focus {
+  background-color: var(--accent-color);
+}
+
+@media screen and (max-width: 767px) {
+  .footer__mail-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+.footer__form-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--hero-color);
+}
+
+.footer__mail-input {
+  width: 450px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: #2f303a;
+  padding: 15px 16px;
+  color: rgba(255, 255, 255, 0.6);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), filter 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer__mail-input:focus {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  background-color: #2f303a;
+}
+
+.footer__sub-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 200px;
+  min-height: 50px;
+  background: var(--accent-color);
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  gap: 10px;
+  letter-spacing: 0.06em;
+  color: var(--hero-color);
+  border: solid 0px var(--hero-color);
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer__sub-btn:focus, .footer__sub-btn:hover {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.footer__form {
+  display: flex;
+}
+@media screen and (max-width: 767px) {
+  .footer__form {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
+  }
 }/*# sourceMappingURL=main.css.map */
