--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,4 @@
 @import './components/logo';
 @import './components/page-header';
 @import './components/modal-menu';
+@import './components/page_footer'
