--- a/css/main.css
+++ b/css/main.css
@@ -81,11 +81,6 @@ img {
   text-decoration: none;
   margin-right: 93px;
 }
-@media screen and (min-width: 768px) {
-  .logo {
-    margin-right: 0;
-  }
-}
 @media screen and (min-width: 1200px) {
   .logo {
     display: flex;
@@ -114,6 +109,11 @@ img {
 .logo--footer {
   margin-bottom: 20px;
   color: var(--hero-color);
+}
+@media screen and (max-width: 1199px) {
+  .logo--footer {
+    margin-right: 0;
+  }
 }
 @media screen and (max-width: 767px) {
   .logo--footer {
@@ -363,20 +363,26 @@ img {
     height: 464px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .footer {
+    height: 251px;
+  }
+}
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__content {
     display: flex;
     flex-wrap: wrap;
     text-align: center;
   }
 }
-
-.footer__container {
-  height: 100%;
+@media screen and (min-width: 1200px) {
+  .footer__content {
+    display: flex;
+  }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__logo-adress {
     display: flex;
     flex-direction: column;
@@ -398,13 +404,35 @@ img {
 .footer__adress-content {
   margin-bottom: 60px;
 }
+@media screen and (min-width: 1200px) {
+  .footer__adress-content {
+    margin-right: 70px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__contact-info--mail {
+    margin-bottom: 9px;
+  }
+}
 
 .footer__addres-item {
   margin-bottom: 12px;
 }
+@media screen and (min-width: 1200px) {
+  .footer__addres-item {
+    margin-bottom: 9px;
+  }
+}
 
 .footer__addres-item:nth-last-child(1) {
   margin-bottom: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__addres-item:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .footer__map {
@@ -423,7 +451,7 @@ img {
   letter-spacing: 0.03em;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1199px) {
   .footer__social {
     display: flex;
     flex-direction: column;
@@ -441,6 +469,11 @@ img {
     margin-bottom: 60px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .footer__social {
+    max-height: 80px;
+  }
+}
 
 .footer__title {
   display: inline-block;
@@ -451,6 +484,11 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--hero-color);
+}
+@media screen and (min-width: 1200px) {
+  .footer__title {
+    padding-top: 12px;
+  }
 }
 
 .footer__icon {
@@ -475,11 +513,23 @@ img {
   background-color: var(--accent-color);
 }
 
-.footer__mail-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+@media screen and (max-width: 767px) {
+  .footer__mail-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .footer__mail-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .footer__form-title {
@@ -490,10 +540,16 @@ img {
   text-transform: uppercase;
   color: var(--hero-color);
 }
+@media screen and (min-width: 1200px) {
+  .footer__form-title {
+    margin-bottom: 20px;
+    margin-left: 93px;
+    padding-top: 12px;
+  }
+}
 
 .footer__mail-input {
   width: 450px;
-  height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
@@ -506,6 +562,14 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   background-color: #2f303a;
+}
+@media screen and (min-width: 1200px) {
+  .footer__mail-input {
+    margin-left: 93px;
+    margin-right: 12px;
+    width: 358px;
+    height: 50px;
+  }
 }
 
 .footer__sub-btn {
@@ -537,6 +601,14 @@ img {
   display: flex;
 }
 @media screen and (max-width: 767px) {
+  .footer__form {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
+  }
+}
+@media screen and (max-width: 1199px) {
   .footer__form {
     flex-direction: column;
     align-items: center;
