--- a/sass/components/_page_footer.scss
+++ b/sass/components/_page_footer.scss
@@ -7,52 +7,77 @@
         height: 604px;
     }
 
-        @media screen and (min-width: $tablet) {
-            height: 464px;
-        }
-}
+    @media screen and (min-width: $tablet) {
+        height: 464px;
+    }
 
-.footer__content {
-    @media screen and (min-width:$tablet) {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
+        @media screen and (min-width: $desktop) {
+        height: 251px;
     }
 }
 
-.footer__container {
-    height: 100%;
+.footer__content {
+    @media screen and (min-width: $tablet) and (max-width: 1199px) {
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
+    }
+
+    @media screen and (min-width: $desktop) {
+        display: flex;
+    }
 }
 
 .footer__logo-adress {
-    @media screen and (min-width: $tablet) {
+    @media screen and (min-width: $tablet) and (max-width: 1199px) {
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
         margin-left: auto;
         margin-right: 165px;
-        
     }
 
     @media screen and (max-width: 767px) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
 }
 
 .footer__adress-content {
     margin-bottom: 60px;
+
+    @media screen and (min-width:$desktop) {
+        margin-right: 70px;
+    }
+}
+
+.footer__contact-info--mail {
+    
+    @media screen and (min-width:$desktop) {
+        margin-bottom: 9px;
+    }
 }
 
 .footer__addres-item {
     margin-bottom: 12px;
+    
+    @media screen and (min-width:$desktop) {
+        margin-bottom: 9px;
+    }
 }
 
 .footer__addres-item:nth-last-child(1) {
     margin-bottom: 0;
+}
+
+.footer__addres-item:last-child {
+    
+    @media screen and (min-width:$desktop) {
+        margin-bottom: 0;
+    }
 }
 
 .footer__map {
@@ -73,7 +98,7 @@
 
 .footer__social {
 
-    @media screen and (min-width: $tablet) {
+    @media screen and (max-width: 1199px) {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -87,6 +112,10 @@
         text-align: center;
         margin-bottom: 60px;
     }
+
+    @media screen and (min-width:$desktop) {
+        max-height: 80px;
+    }
     
 }
 .footer__title {
@@ -98,6 +127,10 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--hero-color);
+
+    @media screen and (min-width:$desktop) {
+        padding-top: 12px;
+    }
 }
 
 .footer__icon {
@@ -124,11 +157,25 @@
     }
 }
 .footer__mail-form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-}
+        @media screen and (max-width: 767px) {
+            display: flex;  
+            flex-direction: column;      
+            align-items: center;    
+            text-align: center;
+        }
+
+
+        @media screen and (max-width: 1199px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        
+}       
 
 
 .footer__form-title {
@@ -138,12 +185,17 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--hero-color);
+
+    @media screen and (min-width:$desktop) {
+        margin-bottom: 20px;
+        margin-left: 93px;
+        padding-top: 12px;
+    }
 }
 
 
 .footer__mail-input {
     width: 450px;
-    height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
@@ -151,14 +203,22 @@
     padding: 15px 16px;
     color: rgba(255, 255, 255, 0.6);
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        filter 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    filter 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:focus {
         border: 1px solid rgba(255, 255, 255, 0.3);
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
         background-color: #2f303a;
     }
+
+    @media screen and (min-width:$desktop) {
+        margin-left: 93px;
+        margin-right: 12px;
+        width: 358px;
+        height: 50px;
+    }
+    
 }
 
 .footer__sub-btn {
@@ -191,7 +251,7 @@
 
 .footer__form {
     display: flex;
-    
+
     
     @media screen and (max-width: 767px) {
         flex-direction: column;
@@ -199,4 +259,12 @@
         text-align: center;
         gap: 20px;
     }
+
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 20px;
+    }
 }
+
