--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,7 @@
 @import './components/logo';
 @import './components/page-header';
 @import './components/modal-menu';
+@import './components/hero-section';
+@import './components/modal-window';
+@import './components/features-section';
 @import './components/page_footer'
