--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,4 +9,6 @@
 @import './components/hero-section';
 @import './components/modal-window';
 @import './components/features-section';
+@import './components/work-section';
+@import './components/team-section';
 @import './components/page_footer'
