--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,11 @@ img {
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
 }
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: none;
+  }
+}
 
 .menu-container.is-open {
   transform: translateX(0);
@@ -687,6 +692,38 @@ img {
   flex-direction: column;
   gap: 30px;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .feature__feature-list {
+    display: flex;
+    flex-direction: row;
+    gap: 0;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .feature__feature-list {
+    flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .feature__item {
+    margin: 15px;
+    width: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .feature__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .feature__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
+}
 
 .feature__images {
   display: flex;
@@ -699,6 +736,18 @@ img {
   border-radius: 4px;
   margin-bottom: 30px;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .feature__images {
+    width: 354px;
+    height: 120px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .feature__images {
+    width: 270px;
+    height: 120px;
+  }
+}
 
 .feature__title {
   margin-bottom: 10px;
@@ -709,12 +758,148 @@ img {
   text-transform: uppercase;
   text-align: center;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .feature__title {
+    text-align: justify;
+  }
+}
 
 .feature__text {
   color: var(--text-color);
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+}
+
+@media screen and (max-width: 1199px) {
+  .works-section {
+    display: none;
+  }
+}
+
+.works-section__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
+}
+
+.works-section__list {
+  display: flex;
+  gap: 30px;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.works-section__item {
+  position: relative;
+}
+
+.works-section__overlay {
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.works-section__div-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.team-section__title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+}
+
+.team-section__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+}
+
+.team-section__item {
+  width: 450px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-section__team1,
+.team-section__team2,
+.team-section__team3,
+.team-section__team4 {
+  padding-top: 30px;
+  padding-bottom: 24px;
+}
+
+.team-section__name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 10px;
+}
+
+.team-section__direction {
+  color: var(--text-color);
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 16px;
+}
+
+.team-section__icons {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 122px;
+  padding-right: 122px;
+}
+
+.team-section__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-section__link:hover, .team-section__link:focus {
+  background-color: rgb(33, 150, 243);
+}
+
+.team-section__link:hover .team-section__icon,
+.team-section__link:focus .team-section__icon {
+  fill: rgb(255, 255, 255);
+}
+
+.team-section__icon {
+  fill: rgb(175, 177, 184);
+}
+.team-section__link:hover .team-section__icon, .team-section__link:focus .team-section__icon {
+  fill: rgb(255, 255, 255);
 }
 
 .footer {
