--- a/sass/components/_features-section.scss
+++ b/sass/components/_features-section.scss
@@ -6,6 +6,37 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+
+    @media screen and (min-width:$tablet) and (max-width: 1199px) {
+        display: flex;
+        flex-direction: row;
+        gap: 0;
+        flex-wrap: wrap;
+        margin: -15px;
+    }
+
+    @media screen and (min-width:$desktop) {
+        flex-direction: row;
+    }
+}
+
+.feature__item {
+    @media screen and (min-width:$tablet) and (max-width: 1199px) {
+        margin: 15px;
+        width: calc((100% - 2 * 30px) / 2);
+        }
+
+&:nth-last-child(-n + 2) {
+    @media screen and (min-width:$tablet) and (max-width: 1199px) {
+        margin-bottom: 0;
+    }
+}
+}
+
+.feature__item:nth-last-child(-n + 2) {
+     @media screen and (min-width:$tablet) and (max-width: 1199px) {
+        margin-bottom: 0;
+    }
 }
 
 .feature__images {
@@ -18,6 +49,16 @@
     background-color: #f5f4fa;
     border-radius: 4px;
     margin-bottom: 30px;
+
+    @media screen and (min-width:$tablet) and (max-width: 1199px) {
+        width: 354px;
+        height: 120px;
+    }
+
+    @media screen and (min-width: $desktop) {
+        width: 270px;
+        height: 120px;
+    }
 }
 
 .feature__title {
@@ -28,6 +69,10 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     text-align: center;
+
+    @media screen and (min-width:$tablet) and (max-width: 1199px) {
+        text-align: justify;
+    }
 }
 
 .feature__text {
