--- a/css/main.css
+++ b/css/main.css
@@ -834,6 +834,20 @@ img {
   gap: 30px;
   align-items: center;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team-section__list {
+    display: flex;
+    flex-direction: row;
+    gap: 0;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-section__list {
+    flex-direction: row;
+  }
+}
 
 .team-section__item {
   width: 450px;
