--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -1,3 +1,7 @@
+.team-section {
+    background: #f5f4fa;
+}
+
 .team-section__title {
     font-weight: 700;
     font-size: 28px;
@@ -5,6 +9,12 @@
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 30px;
+
+    @media screen and (min-width:$desktop) {
+        font-size: 36px;
+        line-height: 1.16;
+        margin-bottom: 50px;
+    }
 }
 
 .team-section__list {
@@ -23,7 +33,12 @@
 
     @media screen and (min-width:$desktop) {
     flex-direction: row;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     }
+
+    
 }
 
 .team-section__item {
@@ -32,6 +47,21 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
+    @media screen and (min-width:$tablet) and (max-width: 1199px) {
+        margin: 15px;
+        width: calc((100% - 2 * 30px) / 2);
+    }
+
+    &:nth-last-child(-n + 2) {
+        @media screen and (min-width:$tablet) and (max-width: 1199px) {
+        margin-bottom: 0;
+    }
+    }
+
+    @media screen and (min-width:$desktop) {
+        width: 270px;
+    }
 }
 
 .team-section__team1,
@@ -40,6 +70,10 @@
 .team-section__team4 {
     padding-top: 30px;
     padding-bottom: 24px;
+
+    @media screen and (min-width:$desktop) {
+        padding-bottom: 30px;
+    }
 }
 
 .team-section__name {
@@ -67,6 +101,11 @@
     align-items: center;
     padding-left: 122px;
     padding-right: 122px;
+
+    @media screen and (min-width:$desktop){
+        padding-left: 32px;
+        padding-right: 32px;
+    }
 }
 
 .team-section__link {
