--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,4 +11,5 @@
 @import './components/features-section';
 @import './components/work-section';
 @import './components/team-section';
+@import './components/partners-section';
 @import './components/page_footer'
