--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,6 @@ img {
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-decoration: none;
-  margin-right: 93px;
 }
 @media screen and (min-width: 1200px) {
   .logo {
@@ -87,6 +86,11 @@ img {
     align-items: center;
     font-size: 26px;
     line-height: 1.2;
+  }
+}
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 93px;
   }
 }
 
@@ -325,7 +329,7 @@ img {
   color: var(--accent-color);
   font-weight: 500;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.22;
   letter-spacing: 0.02em;
 }
 
@@ -405,7 +409,6 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
-  width: 360px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -472,7 +475,6 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 450px;
   height: 609px;
   background-color: var(--hero-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -485,11 +487,23 @@ img {
     height: 581px;
   }
 }
+@media screen and (max-width: 480px) {
+  .modal {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .modal {
+    width: 450px;
+  }
+}
 
 .modal__btn {
   position: absolute;
   width: 30px;
   height: 30px;
+  top: 8px;
+  right: 8px;
   padding: 0;
   margin-top: 8px;
   margin-right: 8px;
@@ -686,8 +700,10 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.feature {
-  padding-bottom: 0;
+@media screen and (min-width: 1200px) {
+  .feature {
+    padding-bottom: 0;
+  }
 }
 
 .feature__feature-list {
@@ -716,21 +732,9 @@ img {
     width: calc((100% - 60px) / 2);
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .feature__item:nth-last-child(-n+2) {
-    margin-bottom: 0;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .feature__item:nth-last-child(-n+2) {
-    margin-bottom: 0;
-  }
-}
 
 .feature__images {
   display: flex;
-  width: 450px;
   height: 120px;
   gap: 30px;
   align-items: center;
@@ -761,7 +765,7 @@ img {
   text-transform: uppercase;
   text-align: center;
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .feature__title {
     text-align: justify;
   }
@@ -867,7 +871,6 @@ img {
 }
 
 .team-section__item {
-  width: 450px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -876,11 +879,6 @@ img {
   .team-section__item {
     margin: 15px;
     width: calc((100% - 60px) / 2);
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .team-section__item:nth-last-child(-n+2) {
-    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -928,8 +926,6 @@ img {
   gap: 10px;
   justify-content: center;
   align-items: center;
-  padding-left: 122px;
-  padding-right: 122px;
 }
 @media screen and (min-width: 1200px) {
   .team-section__icons {
@@ -1005,15 +1001,9 @@ img {
     width: calc((100% - 90px) / 3);
   }
 }
-@media screen and (max-width: 1199px) {
-  .partners-section__item:nth-last-child(-n+2) {
-    margin-bottom: 0;
-  }
-}
 
 .partners-section__link {
   display: flex;
-  width: 210px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -1023,6 +1013,11 @@ img {
 }
 .partners-section__link:hover, .partners-section__link:focus {
   border: 1px solid #2196f3;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .partners-section__link {
+    width: 226px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .partners-section__link {
@@ -1239,7 +1234,7 @@ img {
 }
 
 .footer__mail-input {
-  width: 450px;
+  max-width: 450px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
@@ -1252,6 +1247,11 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   background-color: #2f303a;
+}
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .footer__mail-input {
+    min-width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer__mail-input {
