--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,7 +6,6 @@
     line-height: 1.16;
     letter-spacing: 0.03em;
     text-decoration: none;
-    margin-right: 93px;
 
 
         @media screen and (min-width:$desktop) {
@@ -14,6 +13,10 @@
             align-items: center;
             font-size: 26px;
             line-height: 1.2;
+        }
+
+        @media screen and (min-width:$tablet) {
+            margin-right: 93px;
         }
     }
     
