--- a/sass/components/_modal-menu.scss
+++ b/sass/components/_modal-menu.scss
@@ -64,7 +64,7 @@
     color: var(--accent-color);
     font-weight: 500;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 1.22;
     letter-spacing: 0.02em;
 }
 .contacts-menu {
