--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -25,7 +25,6 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 450px;
     height: 609px;
     background-color: var(--hero-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -38,12 +37,23 @@
         width: 528px;
         height: 581px;
         }
+
+        @media screen and (max-width:$mobile) {
+            width: 100%;
+        }
+        @media screen and (min-width:$mobile) and (max-width: 1199px) {
+            width: 450px;
+        }
+        
+
 }
 
 .modal__btn {
     position: absolute;
     width: 30px;
     height: 30px;
+    top: 8px;
+    right: 8px;
     padding: 0;
     margin-top: 8px;
     margin-right: 8px;
