--- a/sass/components/_page_footer.scss
+++ b/sass/components/_page_footer.scss
@@ -195,7 +195,7 @@
 
 
 .footer__mail-input {
-    width: 450px;
+    max-width: 450px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
@@ -212,6 +212,10 @@
         background-color: #2f303a;
     }
 
+    @media screen and (min-width:$mobile) and (max-width: 1199px) {
+        min-width: 450px;
+    }
+    
     @media screen and (min-width:$desktop) {
         margin-left: 93px;
         margin-right: 12px;
