--- a/sass/components/_partners-section.scss
+++ b/sass/components/_partners-section.scss
@@ -36,17 +36,10 @@
         margin: 15px;
         width: calc((100% - 3 * 30px) / 3);
     }
-
-        &:nth-last-child(-n + 2) {
-            @media screen and (max-width: 1199px) {
-                margin-bottom: 0;
-            }
-        }
 }
 
 .partners-section__link {
     display: flex;
-    width: 210px;
     height: 92px;
     border: 1px solid #afb1b8;
     border-radius: 4px;
@@ -57,6 +50,10 @@
     &:hover,
     &:focus {
         border: 1px solid #2196f3;
+    }
+
+    @media screen and (min-width:$tablet) and (max-width: 1199px) {
+        width: 226px;
     }
 
     @media screen and (min-width:$desktop) {
