--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -15,7 +15,7 @@
             line-height: 1.2;
         }
 
-        @media screen and (min-width:$tablet) {
+        @media screen and (min-width:$mobile) {
             margin-right: 93px;
         }
     }
