--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ img {
     line-height: 1.2;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480px) {
   .logo {
     margin-right: 93px;
   }
@@ -419,6 +419,11 @@ img {
     width: 696px;
   }
 }
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .section-hero__title {
+    width: 360px;
+  }
+}
 
 .section-hero__button {
   min-width: 200px;
@@ -743,6 +748,11 @@ img {
   border-radius: 4px;
   margin-bottom: 30px;
 }
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .feature__images {
+    width: 450px;
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .feature__images {
     width: 354px;
@@ -874,6 +884,11 @@ img {
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .team-section__item {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .team-section__item {
@@ -1013,6 +1028,11 @@ img {
 }
 .partners-section__link:hover, .partners-section__link:focus {
   border: 1px solid #2196f3;
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .partners-section__link {
+    width: 210px;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .partners-section__link {
