--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -47,6 +47,10 @@
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
+    @media screen and (min-width:$mobile) and (max-width: 767px) {
+        width: 450px;
+    }
+
     @media screen and (min-width:$tablet) and (max-width: 1199px) {
         margin: 15px;
         width: calc((100% - 2 * 30px) / 2);
